# AddressValidator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.aws  Dockerfile.dev  README.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: build-test-publish.yaml
docker/: Dockerfile.dev
infra/envs/prod/: main.tf  outputs.tf
infra/envs/staging/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
infra/modules/app_infra/: ec2.tf  ecr.tf  main.tf  outputs.tf  s3.tf  variables.tf
scripts/: deploy-address-validator-on-aws.sh  deploy_prod.sh
src/address_validator/: __init__.py  constants.py  onemap_client.py  search.py  streetdirectory_client.py  validation.py
src/address_validator/registry/: loader.py  sg.py
src/address_validator/steps/: base.py  block_number_match.py  libpostal_parse.py  missing_street_check.py  missing_unit_no_check.py  onemap_validate_postal.py  onemap_validate_postal_with_street.py  search_streetdirectory.py  sg_parse.py  sg_postcode_check.py
src/address_validator/utils/: common.py  libpostal.py  read_from_file.py
src/app/: main.py
src/app/routers/: validation_router.py
src/app/ui/: home.py  row_mapper.py
tests/: conftest.py
tests/unit_tests/: test_block_number_match.py  test_common.py  test_loader.py  test_missing_street_check.py  test_missing_unit_no_check.py  test_onemap_client.py  test_onemap_validate_postal_with_street.py  test_row_mapper.py  test_search_streetdirectory.py  test_sg_parse.py  test_sg_postcode_check.py  test_states_info.py  test_streetdirectory_client.py  test_validation.py  test_validation_router.py
